--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,10 @@
-html, body, #map-canvas {
+html, body {
 	height:100%;
+}
+
+#map-canvas {
+	height:50%;
+	width:50%;
 	padding: 0;
 	margin: 0;
 }
