--- a/styles.css
+++ b/styles.css
@@ -2,9 +2,10 @@ html, body {
 	height:100%;
 }
 
-#map-canvas {
-	height:50%;
+#map-canvas, #street-canvas {
+	height:75%;
 	width:50%;
 	padding: 0;
 	margin: 0;
 }
+
