double view w/oculus

--- a/styles.css
+++ b/styles.css
@@ -3,12 +3,21 @@ html, body {
 }
 
 #map-canvas, #street-canvas {
-	height:75%;
+	height:100%;
 	width:50%;
 	padding: 0;
 	margin: 0;
 }
 
+.left {
+	float:left;
+}
+
+.rigth {
+	float:right;
+}
+
+/*
 #map-canvas {
     float:left;
 }
@@ -16,4 +25,4 @@ html, body {
 #street-canvas {
     float: right;
 }
-
+*/
