--- a/styles.css
+++ b/styles.css
@@ -7,13 +7,14 @@ html, body {
 	width:50%;
 	padding: 0;
 	margin: 0;
+	background:green;
 }
 
-#map-canvas {
+.left {
     float:left;
 }
 
-#street-canvas {
+.right {
     float: right;
 }
 
